CSS fix: thubnail text color in light/dark mode

--- a/src/components/thumbnail/thumbnail.scss
+++ b/src/components/thumbnail/thumbnail.scss
@@ -61,8 +61,15 @@
   &__link {
     display: block;
 
-    color: initial;
     text-decoration: none;
+
+    .theme--light & {
+      color: $dark-base;
+    }
+
+    .theme--dark & {
+      color: $light-base;
+    }
 
     .no-image & {
       cursor: default;
